cmake_minimum_required(VERSION 3.5)

project(dirtreewidget VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
        src/main.cc
        src/tree_filter.cc
        src/tree_filter.h
        src/dir_tree_widget.cc
        src/dir_tree_widget.h
        src/dir_tree_widget.ui
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(dirtreewidget
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
        add_executable(dirtreewidget
            ${PROJECT_SOURCES}
        )
endif()

target_link_libraries(dirtreewidget PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(dirtreewidget PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(dirtreewidget)
endif()
